<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Alexandria</string>
    <string name="test_string" translatable="false">test</string>
    <!-- Menu Items -->
    <string name="books" translatable="true">List of Books</string>
    <string name="scan" translatable="true">Scan/Add a Book</string>
    <string name="about" translatable="true">About this App</string>

    <string name="navigation_drawer_open" translatable="true" >Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="true">Close navigation drawer</string>
    <string name="action_settings" translatable="true">Settings</string>
    <string name="scan_button" translatable="true">Scan</string>
    <string name="input_hint" translatable="true">Insert ISBN-13. Digits only.</string>
    <string name="book_cover" translatable="true">Bookcover</string>

    <string name="ok_button" translatable="true">Next</string>
    <string name="cancel_button" translatable="true">Cancel</string>
    <string name="not_found" translatable="true">No Book found</string>
    <string name="search" translatable="true">Search</string>
    <string name="delete" translatable="true">Delete Book</string>
    <string name="pref_startScreen" translatable="true">Select Startscreen</string>
    <string name="title_activity_settings" translatable="true">Settings</string>
    <string name="action_share" translatable="true">Share</string>
    <string name="back_button" translatable="true">go back</string>
    <string name="share_text" translatable="true">A must read book: </string>


    <string name="about_text" translatable="true">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>

    <string name="book_already_in_db" translatable="true">The book is already in Database</string>
    <string name="no_books_available_in_db" translatable="true">No Books available in Database</string>
     <string name="pref_net_status_key" translatable="false">net-status</string>

    <string name="network_status_unknown" translatable="true">Unknown connection error</string>
    <string name="network_status_invalid_json" translatable="true">The server returned  invalid json data</string>
    <string name="no_network" translatable="true">The network is not available to fetch books</string>
    <string name="add_book_loading_data">Loading data</string>
    <!-- AddBook.java strings -->
    <string name="bookservice_filter" translatable="false">bookservice-filter</string>
    <string name="ean_prefix" translatable="false">978</string>
    <string name="empty_string" translatable="false"></string>
    <!-- BookDetails.java strings -->
    <string name="share_intent_type" translatable="false">text/plain</string>
    <!-- ListOfBooks.java strings -->
    <string name="like_or" translatable="false">" LIKE ? OR "</string>
    <string name="like" translatable="false">" LIKE ? "</string>
    <string name="percentage" translatable="false">%</string>
    <!-- MainActivity.java strings -->
    <string name="fragment_book_detail" translatable="false">Book Detail</string>
    <!-- ScannerActivity.java strings -->
    <string name="result_extra" translatable="false">result</string>
    <!-- BookServie.java strings -->
    <string name="forecast_base_url" translatable="false">https://www.googleapis.com/books/v1/volumes?</string>
    <string name="param_q" translatable="false">q</string>
    <string name="param_isbn" translatable="false">isbn:</string>
    <string name="request_get" translatable="false">GET</string>
    <string name="items" translatable="false">items</string>
    <string name="volume_info" translatable="false">volumeInfo</string>
    <string name="title" translatable="false">title</string>
    <string name="subtitle" translatable="false">subtitle</string>
    <string name="authors" translatable="false">authors</string>
    <string name="description" translatable="false">description</string>
    <string name="categories" translatable="false">categories</string>
    <string name="imageLinks" translatable="false">imageLinks</string>
    <string name="thumbnail" translatable="false">thumbnail</string>
    <string name="emtpy_string" translatable="false"></string>


</resources>
