<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/eancontainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/eancontainer_marginTop"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:minEms="@integer/ean_width"
                android:paddingRight="@dimen/ean_edit_text_paddingRight"
                android:saveEnabled="true" />

            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_button" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlprogressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/eancontainer"
            android:layout_above="@+id/llSaveNext"
            android:gravity="center"
            android:visibility="invisible">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ProgressBar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/progressBar"
                android:background="@color/progress_bar_text"
                android:text="@string/add_book_loading_data"

                />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/eancontainer"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/tvMessage_textSize"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/eancontainer"
            android:layout_marginTop="@dimen/book_title_marginTop"
            android:paddingRight="@dimen/book_title_paddingRight"
            android:textIsSelectable="true"
            android:textSize="@dimen/head_line"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_below="@+id/bookTitle"
            android:layout_marginTop="@dimen/book_subtitle_marginTop"
            android:ellipsize="end"
            android:maxLines="3" />

        <TextView
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/eancontainer"
            android:layout_alignRight="@+id/eancontainer"
            android:layout_below="@+id/bookSubTitle"
            android:layout_marginTop="@dimen/author_marginTop"
            android:gravity="end"
            android:textSize="@dimen/small_fontsize" />

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_alignTop="@+id/authors"
            android:contentDescription="@string/book_cover" />

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/bookCover"
            android:layout_marginTop="@dimen/cathegories_marginTop"
            android:textSize="@dimen/small_fontsize" />


        <LinearLayout
            android:id="@+id/llSaveNext"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/llsavenext_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_discard"
                android:text="@string/cancel_button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_accept"
                android:text="@string/ok_button"
                android:visibility="invisible" />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
