<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="false">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fullBookTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/fullbooktitle_margin"
                    android:paddingRight="@dimen/fullbooktitle_paddingRight"
                    android:textIsSelectable="true"

                    android:textSize="@dimen/head_line"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/fullBookCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/fullBookTitle"
                    android:layout_alignStart="@+id/fullBookTitle"
                    android:layout_below="@+id/fullBookTitle"
                    android:layout_marginTop="@dimen/fullbookcover_marginTop"
                    android:contentDescription="@string/book_cover" />

                <TextView
                    android:id="@+id/fullBookSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/fullBookCover"
                    android:layout_marginLeft="@dimen/fullbooksubtitle_marginLeft"
                    android:layout_marginRight="@dimen/fullbooksubtitle_marginRight"
                    android:layout_toEndOf="@+id/fullBookCover"
                    android:layout_toRightOf="@+id/fullBookCover"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:textSize="@dimen/fullbooksubtitle_textSize" />


                <TextView
                    android:id="@+id/fullBookDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookCover"
                    android:layout_margin="@dimen/fullbookdesc_margin"
                    android:layout_marginLeft="@dimen/fullbookdesc_margin_left"
                    android:ellipsize="end" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookDesc"
                    android:layout_marginTop="@dimen/ll_margin_top"
                    android:orientation="horizontal"
                    android:padding="@dimen/ll_padding">
                    <!-- put layout_width=0 to avoid problems when rendering the categorie -->
                    <TextView
                        android:id="@+id/categories"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|top" />
                    <!-- put layout_width=0 to avoid problems when rendering,else the author get cuts-->
                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:gravity="right|top"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/backButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/fullBookTitle"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/fullBookTitle"
                    android:layout_gravity="right|top"
                    android:contentDescription="@string/back_button"
                    android:onClick="goBack"
                    android:visibility="invisible"
                    android:src="@drawable/ic_action_undo" />


            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/delete_button_marginBottom"
                android:layout_marginRight="@dimen/delete_button_marginRight"
                android:drawableLeft="@drawable/ic_action_discard"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
